@@ -1,5 +1,7 @@
 2004-11-03  Vincent Noel  <vnoel@cox.net>
 
+	* logview.h: Remove unused var.
+
 	* logrtns.c (ReadLogStats): Remove unused variables.
 
 	* monitor.c (monitor_stop): Close the handle.
